--- a/live/aditv.html
+++ b/live/aditv.html
@@ -32,7 +32,14 @@
   </head>
 <body bgcolor="transparent" text="white" topmargin="0" leftmargin="0" rightmargin="0">
 <center>
-<script src="https://cdn.jwplayer.com/players/XNAcs8wA-GoiAFcI3.js"></script>
+<iframe
+    src="/embed/aditv"
+    height="340"
+    width="596"
+    frameborder="0"
+    scrolling="no"
+    allowfullscreen="true">
+</iframe>
 </center>
 </body>
 </html>
