--- a/embed/DiscoveryChannel.html
+++ b/embed/DiscoveryChannel.html
@@ -31,7 +31,7 @@
             live        : true,
             imageUrl    : "https://i.ytimg.com/vi/_fOnZZYM5sE/maxresdefault.jpg?v=8.3.2",
             channel     : "livestreaming",
-            videoUrl    : "https://liveanevia.mncnow.id/live/eds/NatGeoWild/sa_hls/NatGeoWild.m3u8",
+            videoUrl    : "https://57068da1deb21.streamlock.net/inmystream/inmystream/playlist.m3u8",
             adRules     : '',
             features: {
                 loadByDiv:true,
