--- a/live/celestialmovies.html
+++ b/live/celestialmovies.html
@@ -22,7 +22,7 @@
         var video_title = "Live Streaming";
     </script>
         <div id="video" class="fp-slim fp-mute"></div>
-        <script src="//cdn1.mbahnunungonline.net/js/nnVideo.core.js?v=98c76261ffc">
+        <script src="https://cdnjs.mbahnunungonline.net/libs/nnVideo/nnVideo.core.js?v=98c76261ffc">
         {
             target      : 'video',
             title       : 'Live Streaming',
