--- a/embed/rcti.html
+++ b/embed/rcti.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head><meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <head>
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <title>Live Streaming</title>
         
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
