--- a/live/jember1tv.html
+++ b/live/jember1tv.html
@@ -14,7 +14,7 @@
     </script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
   </head>
-<body style="width:100%;height:100%;padding:0;margin:0;background-color:transparent;">
+<body style="width:100%;height:100%;padding:0;margin:0;background-color:#2f3542;">
 <div align="center">
 <script type="text/javascript">
 <!-- tv.mbahnunungonline.net--> 
