--- a/embed/rcti.html
+++ b/embed/rcti.html
@@ -25,7 +25,7 @@
         var video_title = "Live Streaming";
     </script>
         <div id="video" class="fp-slim fp-mute"></div>
-        <script src="https://warningfm.github.io/nnVideo/nnVideo.core.js?v=98c76261ffc">
+        <script src="https://cdnjs.mbahnunungonline.net/libs/nnVideo/Video.core.js?v=98c76261ffc">
         {
             target      : 'video',
             title       : 'Live Streaming',
