--- a/embed/rtv.html
+++ b/embed/rtv.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="initial-scale = 1.0, user-scalable = no, width=device-width, height=device-height, maximum-scale=1.0">
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="description" content="Live Streaming" />
-    <link rel="stylesheet" href="//vjs.zencdn.net/5.4.6/video-js.min.css?v=1.8">
+    <link rel="stylesheet" href="/video-js.min.css?v=1.8">
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 <style>
            body {
