--- a/embed/mnctv.html
+++ b/embed/mnctv.html
@@ -24,7 +24,7 @@
   </head>
   <body class="desktop">
 
-    <video poster="https://i.ytimg.com/vi/zDZ3DVF9xDw/maxresdefault.jpg?v=8.3.2" id="player" class="video-js vjs-big-play-centered vjs-fill" controls autoplay>
+    <video poster="../img/thumbs/mnctv-stream.jpg?v=8.3.2" id="player" class="video-js vjs-big-play-centered vjs-fill" controls autoplay>
     <source src="https://cvs.rctiplus.id/live/eds/MNCTV_Logo/sa_hls/MNCTV_Logo.m3u8" type="application/x-mpegURL" />
     </video>
 
