--- a/embed/nettv2.html
+++ b/embed/nettv2.html
@@ -19,7 +19,7 @@
        <script src="https://warningfm.github.io/ajax/libs/hola_player/package/dist/hola_player.js"></script>
 	   
        <div align="center">
-        <video poster="../img/thumbs/net-tv.jpg?v=8.3.2" id="video-player" class="video-js vjs-fluid vjs-default-skin" height="340" width="596" controls autoplay>
+        <video poster="https://4.bp.blogspot.com/-6pdFkNw_o1M/W-1VGPlQTFI/AAAAAAAAKGg/YsSal-Fcn_8JzyML2LUi0xavh2WHat0RwCPcBGAYYCw/s1600/nettv.jpg?v=8.3.2" id="video-player" class="video-js vjs-fluid vjs-default-skin" height="340" width="596" controls autoplay>
         <source src="https://kastproxy-us.herokuapp.com/http://rr2.dens.tv/s/s08/index.m3u8" type="application/x-mpegURL" />
        </video>
      <script>
