--- a/embed/nettv.html
+++ b/embed/nettv.html
@@ -19,8 +19,8 @@
        <script src="https://cdnjs.mbahnunungonline.net/libs/hola_player/package/dist/hola_player.js"></script>
 	   
        <div align="center">
-        <video poster="https://i.imgur.com/dTy5ZCh.jpg" id="video-player" class="video-js vjs-fluid vjs-default-skin" height="340" width="596" controls autoplay>
-        <source src="https://kastproxy-us.herokuapp.com/http://rr2.dens.tv/s/s08/index.m3u8" type="application/x-mpegURL" />
+        <video poster="https://4.bp.blogspot.com/-6pdFkNw_o1M/W-1VGPlQTFI/AAAAAAAAKGg/YsSal-Fcn_8JzyML2LUi0xavh2WHat0RwCPcBGAYYCw/s1600/nettv.jpg" id="video-player" class="video-js vjs-fluid vjs-default-skin" height="340" width="596" controls autoplay>
+        <source src="https://kastproxy-us.herokuapp.com/http://rr2.dens.tv/s/s08/01.m3u8" type="application/x-mpegURL" />
         </video>
      <script>
     (function(){
