--- a/embed/index.html
+++ b/embed/index.html
@@ -43,8 +43,8 @@ document.getElementsByTagName('head')[0].appendChild(meta);
 		height: '340',
 		skin: {"active": "#DF2148", "inactive": "#CCCCCC", "name": "glow"},
 		abouttext: 'Design by : mbah nunung Online',
-		aboutlink: 'http://mbahnunungonline.net',
-		autostart: 'true',
+		aboutlink: 'https://www.mbahnunungonline.net',
+		autostart: 'false',
 		file: "https://live.cnnindonesia.com/livecnn/smil:cnntv.smil/playlist.m3u8",
 		title: "CNN Indonesia",
 		image: "https://cdn4.mbahnunungonline.net/images/Logo-CNN-Indonesia.jpg"
