--- a/embed/index.html
+++ b/embed/index.html
@@ -47,7 +47,7 @@ document.getElementsByTagName('head')[0].appendChild(meta);
 		autostart: 'false',
 		file: "https://live.cnnindonesia.com/livecnn/smil:cnntv.smil/playlist.m3u8",
 		title: "CNN Indonesia",
-		image: "https://cdn4.mbahnunungonline.net/images/Logo-CNN-Indonesia.jpg"
+		image: "https://4.bp.blogspot.com/-Gv5BnaZh7lE/Xn2UjQeWCKI/AAAAAAAAML0/ggApIyCguecnzZDSadWjl0PuoBMvkh9SQCLcBGAsYHQ/s1600/Logo-CNN-Indonesia720.jpg"
 	});
 	jwplayer().onError(function(){
 		jwplayer().load({
