--- a/live/cnnindonesia.html
+++ b/live/cnnindonesia.html
@@ -24,7 +24,7 @@
     </style>
     <script type="text/javascript">
     </script>
-    <script src="https://cdn4.mbahnunungonline.net/js/jw7-hlsjs-provider.js"></script>
+    <script src="//cdn4.mbahnunungonline.net/js/jw7-hlsjs-provider.js"></script>
     <script src="//ssl.p.jwpcdn.com/player/v/8.2.2/jwplayer.js?v=1.1.0.0.222"></script>
     <script>jwplayer.key = "9dOyFG96QFb9AWbR+FhhislXHfV1gIhrkaxLYfLydfiYyC0s";</script>
 </head>
@@ -43,11 +43,11 @@ document.getElementsByTagName('head')[0].appendChild(meta);
 		height: '340',
 		skin: {"active": "#DF2148", "inactive": "#CCCCCC", "name": "glow"},
 		abouttext: 'Design by : mbah nunung Online',
-		aboutlink: 'http://mbahnunungonline.net',
+		aboutlink: 'https://www.mbahnunungonline.net',
 		autostart: 'true',
 		file: "https://live.cnnindonesia.com/livecnn/smil:cnntv.smil/playlist.m3u8",
 		title: "CNN Indonesia",
-		image: "../img/thumbs/Logo-CNN-Indonesia.jpg"
+		image: "https://4.bp.blogspot.com/-Gv5BnaZh7lE/Xn2UjQeWCKI/AAAAAAAAML0/ggApIyCguecnzZDSadWjl0PuoBMvkh9SQCLcBGAsYHQ/s1600/Logo-CNN-Indonesia720.jpg"
 	});
 	jwplayer().onError(function(){
 		jwplayer().load({
