--- a/embed/metrotv2.html
+++ b/embed/metrotv2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-   <head><meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-       
+   <head>
+       <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
        <!-- Start Meta Ads -->
        <meta name="platform" content="desktop" />
