--- a/embed/sctv.html
+++ b/embed/sctv.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-   <head><meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-       
+   <head>
+       <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
        <!-- Start Meta Ads -->
        <meta name="platform" content="desktop" />
@@ -19,7 +19,7 @@
        <script src="https://cdnjs.mbahnunungonline.net/libs/hola_player/package/dist/hola_player.js"></script>
 	   
        <div align="center">
-        <video poster="https://assets-jpcust.jwpsrv.com/thumbnails/onygths5-720.jpg" id="video-player" class="video-js vjs-fluid vjs-default-skin" height="340" width="596" controls autoplay>
+        <video poster="https://4.bp.blogspot.com/-wSWj5Bh0hhM/W9GvNTXvG-I/AAAAAAAAJ1o/JNO9gkWCOIkpMnmjVcUx5C5DjA9NaYCigCPcBGAYYCw/s1600/sctv-tv-stream-c19bb7.jpg" id="video-player" class="video-js vjs-fluid vjs-default-skin" height="340" width="596" controls autoplay>
         <source src="https://kastproxy-us.herokuapp.com/http://rr3.dens.tv/s/s253/01.m3u8" type="application/x-mpegURL" />
         </video>
      <script>
