--- a/embed/berita1.html
+++ b/embed/berita1.html
@@ -19,7 +19,7 @@
        <script src="https://cdnjs.mbahnunungonline.net/libs/hola_player/package/dist/hola_player.js"></script>
 	   
        <div align="center">
-        <video poster="https://i.imgur.com/i6tIxlO.jpg?v=8.3.2" id="video-player" class="video-js vjs-fluid vjs-default-skin" height="340" width="596" controls autoplay>
+        <video poster="https://3.bp.blogspot.com/-uH1MqhDHK80/Xn65_sBzZkI/AAAAAAAAMMA/pPck0SJob6kY1rh3iHamm3junD4g6I-2wCLcBGAsYHQ/s1600/beritaSatu.jpg?v=8.3.2" id="video-player" class="video-js vjs-fluid vjs-default-skin" height="340" width="596" controls autoplay>
         <source src="https://b1news.beritasatumedia.com/Beritasatu/B1News_manifest.m3u8" type="application/x-mpegURL" />
        </video>
       <script>
