--- a/live/metrotv.html
+++ b/live/metrotv.html
@@ -13,7 +13,7 @@
     <meta property="og:title" content="METROTV" /> 
     <meta property="og:description" content="Klik Gambarnya Boss untuk nonton METROTV langsung lewat Facebook." />
     <meta property="og:image" content="https://3.bp.blogspot.com/-wvQngZIJEE0/T8d5n4YSmRI/AAAAAAAABC0/1SmFmgjdPkY/s320/metrotv.png" />
-    <meta property="og:video" content="https://cdn4.mbahnunungonline.net/player/player5.8.swf?file=mp4:metro_360p.stream&type=rtmp&streamer=rtmp://103.225.66.101:1935/live-edge&autostart=true&stretching=exactfit&volume=100&bandwidth=1&duration=0&showdigits=&&stretching=exactfit&backcolor=000000&frontcolor=ffffff&lightcolor=CD0000&screencolor=0000fff&volume=100&controlbar=over&autostart=true&displayclick=fullscreen&repeat=false&image=https://2.bp.blogspot.com/_Eg6k9X3yWUM/S_jSj7gsZ4I/AAAAAAAAACM/NtMW7mPg6ZI/s1600/metro.png"/>
+    <meta property="og:video" content="https://www.mivo.com/embed/?v=https://edge.medcom.id/live-edge/smil:metro.smil/playlist.m3u8&image=https://i.imgur.com/SoL4TcZ.jpg"/>
     <link type='text/css' rel='stylesheet' href='https://cdn4.mbahnunungonline.net/css/v7/jwplayer.css' />
     <link type='text/css' rel='stylesheet' href='https://cdn4.mbahnunungonline.net/css/v7/player.css' />
     <style type="text/css">
