--- a/embed/tvri.html
+++ b/embed/tvri.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-   <head><meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-       
+   <head>
+       <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
        <!-- Start Meta Ads -->
        <meta name="platform" content="desktop" />
@@ -20,7 +20,7 @@
 	   
        <div align="center">
         <video poster="https://content.jwplatform.com/v2/media/odC0YX5G/poster.jpg?width=720" id="video-player" class="video-js vjs-fluid vjs-default-skin" height="340" width="596" controls autoplay>
-        <source src="https://kastproxy-us.herokuapp.com/http://rr2.dens.tv/s/s11/index.m3u8" type="application/x-mpegURL" />
+        <source src="https://kastproxy-us.herokuapp.com/http://118.97.50.107/Content/HLS/Live/Channel(TVRINASIONAL)/Stream(04)/index.m3u8" type="application/x-mpegURL" />
        </video>
      <script>
     (function(){
