--- a/live/fashiontv.html
+++ b/live/fashiontv.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>Fashion TV</title>
-    <link href="https://cdn1.mbahnunungonline.net/css/dist/v7/player.css?v=002" rel="stylesheet" type="text/css">
-    <link href="https://cdn1.mbahnunungonline.net/css/dist/v7/jwplayer.css?v=002" rel="stylesheet" type="text/css">
+    <link href="https://cdn4.mbahnunungonline.net/css/v7/player.css?v=002" rel="stylesheet" type="text/css">
+    <link href="https://cdn4.mbahnunungonline.net/css/v7/jwplayer.css?v=002" rel="stylesheet" type="text/css">
     <style type="text/css">
         body { margin:0 auto; padding:0; background:#EEE; overflow: hidden; }
         #title { font:bold 24px/36px Arial, sans-serif; color:#000; margin:40px auto 10px auto; display:none; text-shadow:#FFF 2px 2px 0; }
@@ -20,7 +20,7 @@
         var video_title = "Live Streaming";
     </script>
         <div id="video" class="fp-slim fp-mute"></div>
-        <script src="https://cdn1.mbahnunungonline.net/js/nnVideo.core.js?v=98c76261ff1">
+        <script src="https://warningfm.github.io/v3/js/nnVideo.core.js?v=98c76261ff1">
         {
             target      : 'video',
             title       : 'Live Streaming',
