--- a/live/celestialmovies.html
+++ b/live/celestialmovies.html
@@ -2,7 +2,6 @@
 <html lang="en">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	
     <title>Celestial Movies</title>
     <link href="https://cdn4.mbahnunungonline.net/css/v7/player.css?v=002" rel="stylesheet" type="text/css">
     <link href="https://cdn4.mbahnunungonline.net/css/v7/jwplayer.css?v=002" rel="stylesheet" type="text/css">
@@ -22,7 +21,7 @@
         var video_title = "Live Streaming";
     </script>
         <div id="video" class="fp-slim fp-mute"></div>
-        <script src="https://cdnjs.mbahnunungonline.net/libs/nnVideo/nnVideo.core.js?v=98c76261ffc">
+        <script src="https://warningfm.github.io/v3/js/nnVideo.core.js?v=98c76261ffc">
         {
             target      : 'video',
             title       : 'Live Streaming',
