--- a/live/celestialmovies.html
+++ b/live/celestialmovies.html
@@ -12,7 +12,7 @@
     </style>
     <script type="text/javascript">
     </script>
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
   </head>
 
 <body bgcolor="#2f3542" text="white" topmargin="0" leftmargin="0" rightmargin="0">
