--- a/embed/axn.html
+++ b/embed/axn.html
@@ -20,7 +20,7 @@
 	   
        <div align="center">
         <video poster="../img/thumbs/AXN_logo.png?v=8.3.2" id="video-player" class="video-js vjs-fluid vjs-default-skin" height="340" width="596" controls autoplay>
-        <source src="https://kastproxy-us.herokuapp.com/http://rr.dens.tv/h/h141/index.m3u8" type="application/x-mpegURL" />
+        <source src="https://kastproxy-us.herokuapp.com/http://rr.dens.tv/h/h141/01.m3u8" type="application/x-mpegURL" />
        </video>
      <script>
       window.hola_player();
