--- a/live/EmilyBloom.html
+++ b/live/EmilyBloom.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Fashion TV</title>
+    <title>Emily Bloom amazing girl</title>
     <link href="https://cdn4.mbahnunungonline.net/css/v7/player.css?v=002" rel="stylesheet" type="text/css">
     <link href="https://cdn4.mbahnunungonline.net/css/v7/jwplayer.css?v=002" rel="stylesheet" type="text/css">
     <style type="text/css">
