--- a/embed/tvone.html
+++ b/embed/tvone.html
@@ -20,7 +20,7 @@
 	   
        <div align="center">
         <video poster="https://4.bp.blogspot.com/-N0ZrPxFJPYs/W9ILcOMkTuI/AAAAAAAAJ18/oBB_VumAKnc5RXykxJJo0XjSwXpdmOckQCLcBGAs/s1600/tvone-tv-stream-60883f.jpg" id="video-player" class="video-js vjs-fluid vjs-default-skin" height="340" width="596" controls autoplay>
-        <source src="https://kastproxy-us.herokuapp.com/http://rr2.dens.tv/s/s105/index2.m3u8" type="application/x-mpegURL" />
+        <source src="https://kastproxy-us.herokuapp.com/http://rr2.dens.tv/s/s105/02.m3u8" type="application/x-mpegURL" />
        </video>
      <script>
     (function(){
