--- a/embed/tvone.html
+++ b/embed/tvone.html
@@ -20,7 +20,8 @@
 	   
        <div align="center">
         <video poster="https://4.bp.blogspot.com/-N0ZrPxFJPYs/W9ILcOMkTuI/AAAAAAAAJ18/oBB_VumAKnc5RXykxJJo0XjSwXpdmOckQCLcBGAs/s1600/tvone-tv-stream-60883f.jpg" id="video-player" class="video-js vjs-fluid vjs-default-skin" height="340" width="596" controls autoplay>
-        <source src="https://kastproxy-us.herokuapp.com/http://rr2.dens.tv/s/s105/02.m3u8" type="application/x-mpegURL" />
+        <source src="https://livetvhooq.akamaized.net:443/205606ce940f479dafb9ba6d71d61139/ap-southeast-1/5493668622001/profile_2/chunklist.m3u8?hdnts=st=1573597436~exp=9007200828338427~acl=/205606ce940f479dafb9ba6d71d61139/*/profile_2/chunklist.m3u8*~hmac=4ee84b00deb7c571a099059b60b98fea70033a603996d9091fe00244acd56f79
+" type="application/x-mpegURL" />
        </video>
      <script>
     (function(){
