--- a/embed/tvri.html
+++ b/embed/tvri.html
@@ -16,7 +16,7 @@
       <div id="vjs-video-embed" class="left relative"></div>
       <div id="my-video" class="video_embed_hls post_embed_video_center">
       <video class="video-js vjs-default-skin vjs-16-9" controls autoplay></video>
-      <script>(function(){var a={linear:"",};var b=document.location.search.substr(1);window.hola_player({title:"TVRI",poster:"https://content.jwplatform.com/v2/media/odC0YX5G/poster.jpg?width=720",sources:[{src:"https://kastproxy-us.herokuapp.com/http://210.210.155.35/qwr9ew/s/s11/index.m3u8",}],ads:{adTagUrl:a[b||"linear"]||b,},settings:{quality:true,},watermark:{image:'',position:'bottom-left',fadeTime:5000,},})})();</script>
+      <script>(function(){var a={linear:"",};var b=document.location.search.substr(1);window.hola_player({title:"TVRI",poster:"https://content.jwplatform.com/v2/media/odC0YX5G/poster.jpg?width=720",sources:[{src:"https://kastproxy-us.herokuapp.com/http://rr2.dens.tv/s/s11/index.m3u8",}],ads:{adTagUrl:a[b||"linear"]||b,},settings:{quality:true,},watermark:{image:'',position:'bottom-left',fadeTime:5000,},})})();</script>
   </div>
  
   </body>
