--- a/embed/aljazeera_ar.html
+++ b/embed/aljazeera_ar.html
@@ -20,7 +20,7 @@
 	   
        <div align="center">
         <video poster="https://i.imgur.com/svX7oPb.jpg?v=8.3.2" id="video-player" class="video-js vjs-fluid vjs-default-skin" height="340" width="596" controls autoplay>
-        <source src="https://aja-hd-web-hls-live.secure.footprint.net/egress/chandler/aljazeera2/arabichd/index.m3u8" type="application/x-mpegURL" />
+        <source src="https://live-hls-web-aja.getaj.net/AJA/index.m3u8" type="application/x-mpegURL" />
        </video>
      <script>
     (function(){
