--- a/embed/aljazeera_en.html
+++ b/embed/aljazeera_en.html
@@ -20,7 +20,7 @@
 	   
        <div align="center">
         <video poster="https://3.bp.blogspot.com/-KqX2-akkObs/XMfPVbWWyHI/AAAAAAAALY8/8ck9vzInyuIGDkjL0hGCQDYR_0wHmS4pACLcBGAs/s1600/aljazeera_en.jpg?v=8.3.2" id="video-player" class="video-js vjs-fluid vjs-default-skin" height="340" width="596" controls autoplay>
-        <source src="https://english.streaming.aljazeera.net/aljazeera/english2/index.m3u8" type="application/x-mpegURL" />
+        <source src="https://live-hls-web-aje.getaj.net/AJE/index.m3u8" type="application/x-mpegURL" />
        </video>
      <script>
       window.hola_player();
