--- a/embed/aljazeera-arabic.html
+++ b/embed/aljazeera-arabic.html
@@ -12,7 +12,7 @@
 <div id="player"></div>
     <script>
       var player = new Clappr.Player({
-  	  source: 'https://english.streaming.aljazeera.net/aljazeera/arabic2/index.m3u8',
+  	  source: 'https://live-hls-web-aja.getaj.net/AJA/index.m3u8',
   	  poster: 'https://2.bp.blogspot.com/-DupLtYavy1U/W9feNYQKM6I/AAAAAAAAJ38/XSB7zFyRvdoF2Em91G5YIQqOWBr8UnScQCLcBGAs/s1600/aljazeera_759.jpg',
 	  width: '460',
 	  height: '256',
