--- a/embed/transtv.html
+++ b/embed/transtv.html
@@ -20,8 +20,7 @@
 	   
        <div align="center">
         <video poster="https://assets-jpcust.jwpsrv.com/thumbnails/dk5clz1v-720.jpg" id="video-player" class="video-js vjs-fluid vjs-default-skin" height="340" width="596" controls autoplay>
-        <source src="https://livetvhooq.akamaized.net:443/d47264e2fe8f43848fb79b43915fb298/ap-southeast-1/5493668622001/profile_2/chunklist.m3u8?hdnts=st=1573597746~exp=9007200828338737~acl=/d47264e2fe8f43848fb79b43915fb298/*/profile_2/chunklist.m3u8*~hmac=f7affc9ab3c5d753e46be5cb9c59599ff9af1992dd034c161ae4831ee9f9bfa9
-" type="application/x-mpegURL" />
+        <source src="https://kastproxy-us.herokuapp.com/http://rr3.dens.tv/s/s252/01.m3u8" type="application/x-mpegURL" />
        </video>
      <script>
     (function(){
