--- a/embed/tv2_rtm.html
+++ b/embed/tv2_rtm.html
@@ -20,7 +20,7 @@
 	   
        <div align="center">
         <video poster="../img/thumbs/TV2-Logo.svg?v=8.3.2" id="video-player" class="video-js vjs-fluid vjs-default-skin" height="340" width="596" controls autoplay>
-        <source src="https://rtm2mobile.secureswiftcontent.com/Origin01/ngrp:RTM1/playlist.m3u8" type="application/x-mpegURL" />
+        <source src="https://rtm5hdmobile.secureswiftcontent.com/Origin1/ngrp:RTM1/playlist.m3u8" type="application/x-mpegURL" />
        </video>
      <script>
       window.hola_player();
