--- a/embed/tvi.html
+++ b/embed/tvi.html
@@ -20,7 +20,7 @@
 	   
        <div align="center">
         <video poster="https://4.bp.blogspot.com/-BJpbb1Wxc8M/XMK1ZG2aucI/AAAAAAAALVw/92dEplccyMUliAlaktqK7ka0xUyjOI3nQCLcBGAs/s1600/TV_Okey_RTM.png?v=8.3.2" id="video-player" class="video-js vjs-fluid vjs-default-skin" height="340" width="596" controls autoplay>
-        <source src="http://rtm1mobile.secureswiftcontent.com/Origin02/ngrp:RTM2/playlist.m3u8" type="application/x-mpegURL" />
+        <source src="https://rtm2hdmobile.secureswiftcontent.com/Origin02/ngrp:RTM2/playlist.m3u8" type="application/x-mpegURL" />
        </video>
      <script>
       window.hola_player();
