--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <title>Live Streaming</title>
     <meta charset="utf-8">
     <meta name="robots" content="noindex">
+    <meta name="google-site-verification" content="C-y3Rm4dkzaiScMSfPMQI4bU35i-t-N6VwHibjLzr6U" />
     <meta property="fb:app_id" content="306338632814491"/>
     <meta property="og:type" content="warningfm:station"/>
-    <meta property="og:url" content="https://livetv.mbahnunungonline.net"/>
+    <meta property="og:url" content="https://tv.mbahnunungonline.net"/>
     <meta property="og:type" content="movie" /> 
     <meta property="og:video:height" content="326" /> 
     <meta property="og:video:width" content="486" /> 
