--- a/embed/sctv.html
+++ b/embed/sctv.html
@@ -15,12 +15,12 @@
                overflow: hidden;
            }
        </style>
-       <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-       <script src="https://cdnjs.mbahnunungonline.net/libs/hola_player/package/dist/hola_player.js"></script>
+       <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+       <script src="//cdnjs.mbahnunungonline.net/libs/hola_player/package/dist/hola_player.js"></script>
 	   
        <div align="center">
         <video poster="https://4.bp.blogspot.com/-wSWj5Bh0hhM/W9GvNTXvG-I/AAAAAAAAJ1o/JNO9gkWCOIkpMnmjVcUx5C5DjA9NaYCigCPcBGAYYCw/s1600/sctv-tv-stream-c19bb7.jpg" id="video-player" class="video-js vjs-fluid vjs-default-skin" height="340" width="596" controls autoplay>
-        <source src="https://kastproxy-us.herokuapp.com/http://rr3.dens.tv/s/s253/01.m3u8" type="application/x-mpegURL" />
+        <source src="https://kastproxy-us.herokuapp.com/http://rr2.dens.tv/s/s03/index.m3u8" type="application/x-mpegURL" />
         </video>
      <script>
     (function(){
