--- a/live/beritasatu.html
+++ b/live/beritasatu.html
@@ -15,8 +15,8 @@
     <meta property="og:description" content="Klik Gambarnya Boss untuk nonton BeritaSatu langsung lewat Facebook." />
     <meta property="og:image" content="https://3.bp.blogspot.com/-p6qwZWRUdTc/T8d07Dixt8I/AAAAAAAABCA/ZFtYpUN2gu8/s320/berita-satu.png" />
     <meta property="og:video" content="https://www.mivo.com/embed/?v=https://b1news.beritasatumedia.com/Beritasatu/B1News_manifest.m3u8&image=https://3.bp.blogspot.com/-XAlmX7omXtE/UrIBNxp8qRI/AAAAAAAACTc/WcyQrjSLQxQ/s1600/BeritaSatu.png"/>
-    <link type='text/css' rel='stylesheet' href='https://cdn4.mbahnunungonline.net/css/v7/jwplayer.css' />
-    <link type='text/css' rel='stylesheet' href='https://cdn4.mbahnunungonline.net/css/v7/player.css' />
+    <link type='text/css' rel='stylesheet' href='//cdn4.mbahnunungonline.net/css/v7/jwplayer.css' />
+    <link type='text/css' rel='stylesheet' href='//cdn4.mbahnunungonline.net/css/v7/player.css' />
     <style type="text/css">
         body { margin:0 auto; padding:0; background:#2f3542; overflow: hidden; }
         #title { font:bold 24px/36px Arial, sans-serif; color:#000; margin:40px auto 10px auto; display:none; text-shadow:#FFF 2px 2px 0; }
@@ -24,7 +24,7 @@
     </style>
     <script type="text/javascript">
     </script>
-    <script src="https://cdn1.mbahnunungonline.net/jwp/jw7-hlsjs-provider.js"></script>
+    <script src="//cdn4.mbahnunungonline.net/js/jw7-hlsjs-provider.js"></script>
     <script src="//ssl.p.jwpcdn.com/player/v/8.2.0/jwplayer.js?v=1.1.0.0.222"></script>
     <script>jwplayer.key = "9dOyFG96QFb9AWbR+FhhislXHfV1gIhrkaxLYfLydfiYyC0s";</script>
   </head>
