--- a/live/cnnindonesia.html
+++ b/live/cnnindonesia.html
@@ -15,8 +15,8 @@
     <meta property="og:description" content="Klik Gambarnya Boss untuk nonton CNN Indonesia langsung lewat Facebook." />
     <meta property="og:image" content="https://2.bp.blogspot.com/-s7ZOCHittVk/V03sueWgDwI/AAAAAAAAFUU/-lYZd3UGm-o6sr8-oFEmD5wyhZkvpgUBACLcB/s1600/logo_cnn_ind.png" />
     <meta property="og:video" content="https://tv.mbahnunungonline.net/embed/player/?s=https://live.cnnindonesia.com/livecnn/smil:cnntv.smil/playlist.m3u8&autoplay=1&image=https://content.jwplatform.com/thumbs/CqYFl76H-720.jpg"/>
-    <link type='text/css' rel='stylesheet' href='https://cdn4.mbahnunungonline.net/css/v7/jwplayer.css' />
-    <link type='text/css' rel='stylesheet' href='https://cdn4.mbahnunungonline.net/css/v7/player.css' />
+    <link type='text/css' rel='stylesheet' href='//cdn4.mbahnunungonline.net/css/v7/jwplayer.css' />
+    <link type='text/css' rel='stylesheet' href='//cdn4.mbahnunungonline.net/css/v7/player.css' />
     <style type="text/css">
         body { margin:0 auto; padding:0; background:#EEE; overflow: hidden; }
         #title { font:bold 24px/36px Arial, sans-serif; color:#000; margin:40px auto 10px auto; display:none; text-shadow:#FFF 2px 2px 0; }
