--- a/embed/kompastv.html
+++ b/embed/kompastv.html
@@ -20,7 +20,7 @@
 	   
        <div align="center">
         <video poster="https://i.imgur.com/6rmMN8f.jpg" id="video-player" class="video-js vjs-fluid vjs-default-skin" height="340" width="596" controls autoplay>
-        <source src="https://player.cloudrad.io/http://rr2.dens.tv/s/s104/index.m3u8" type="application/x-mpegURL" />
+        <source src="https://player.cloudrad.io/http://rr2.dens.tv/s/s104/index2.m3u8" type="application/x-mpegURL" />
         </video>
      <script>
     (function(){
