--- a/embed/elshintatv.html
+++ b/embed/elshintatv.html
@@ -34,7 +34,7 @@
             live        : true,
             imageUrl    : "https://4.bp.blogspot.com/-M8mlcK40_tA/W-f4QOPa4GI/AAAAAAAAKDE/JMZNmB7JLQY1awKGNlX7OSrt1DKOFJIYwCLcBGAs/s1600/elshintaTV.jpg",
             channel     : "livestreaming",
-            videoUrl    : "https://kastproxy-us.herokuapp.com/http://rrelshinta.dens.tv/s/s10/index.m3u8",
+            videoUrl    : "https://kastproxy-us.herokuapp.com/http://rrelshinta.dens.tv/s/s10/index2.m3u8",
             adRules     : '',
             features: {
                 loadByDiv:true,
