--- a/embed/berita1.html
+++ b/embed/berita1.html
@@ -16,7 +16,7 @@
            }
        </style>
        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-       <script src="https://cdnjs.mbahnunungonline.net/libs/hola_player/package/dist/hola_player.js"></script>
+       <script src="https://warningfm.github.io/ajax/libs/hola_player/package/dist/hola_player.js"></script>
 	   
        <div align="center">
         <video poster="https://3.bp.blogspot.com/-uH1MqhDHK80/Xn65_sBzZkI/AAAAAAAAMMA/pPck0SJob6kY1rh3iHamm3junD4g6I-2wCLcBGAsYHQ/s1600/beritaSatu.jpg?v=8.3.2" id="video-player" class="video-js vjs-fluid vjs-default-skin" height="340" width="596" controls autoplay>
