--- a/embed/rtv.html
+++ b/embed/rtv.html
@@ -31,7 +31,7 @@
             live        : true,
             imageUrl    : "https://2.bp.blogspot.com/-Nx3S5zmrU5o/W9GuCwlSy6I/AAAAAAAAJ1Y/dZvyb0LMbCgyqMYs5_e6YLCZ9sYgNWNwACPcBGAYYCw/s1600/rtv-stream-06c6dc.jpg?v=8.3.2?v=8.3.2",
             channel     : "livestreaming",
-            videoUrl    : "https://kastproxy-us.herokuapp.com/http://rr2.dens.tv/s/s12/01.m3u8",
+            videoUrl    : "http://rr2.dens.tv/s/s12/01.m3u8",
             adRules     : '',
             features: {
                 loadByDiv:true,
