--- a/embed/celestialmovies.html
+++ b/embed/celestialmovies.html
@@ -16,11 +16,11 @@
            }
        </style>
        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-       <script src="https://cdn1.mbahnunungonline.net/v3/hola_player/hola_player.js"></script>
+       <script src="https://warningfm.github.io/ajax/libs/hola_player/package/dist/hola_player.js"></script>
 	   
        <div align="center">
         <video poster="../img/thumbs/celestialmovies.jpg?v=8.3.2" id="video-player" class="video-js vjs-fluid vjs-default-skin" height="340" width="596" controls autoplay>
-        <source src="https://kastproxy-us.herokuapp.com/http://rr2.dens.tv/s/s33/index.m3u8" type="application/x-mpegURL" />
+        <source src="http://rr2.dens.tv/s/s33/index.m3u8" type="application/x-mpegURL" />
        </video>
      <script>
       window.hola_player();
