--- a/live/celestialmovies.html
+++ b/live/celestialmovies.html
@@ -30,7 +30,7 @@
             live        : true,
             imageUrl    : "https://i.imgur.com/uqvybVz.jpg?v=8.3.2",
             channel     : "livestreaming",
-            videoUrl    : "https://kastproxy-us.herokuapp.com/http://rr2.dens.tv/s/s33/index.m3u8",
+            videoUrl    : "http://rr2.dens.tv/s/s33/index.m3u8",
             adRules     : '',
             features: {
                 loadByDiv:true,
