--- a/embed/axn.html
+++ b/embed/axn.html
@@ -34,7 +34,7 @@
             live        : true,
             imageUrl    : "../img/thumbs/AXN_logo.png?v=8.3.2",
             channel     : "livestreaming",
-            videoUrl    : "https://kastproxy-us.herokuapp.com/http://rr.dens.tv/h/h141/01.m3u8",
+            videoUrl    : "http://rr.dens.tv/h/h141/01.m3u8",
             adRules     : '',
             features: {
                 loadByDiv:true,
