--- a/embed/thrill.html
+++ b/embed/thrill.html
@@ -34,7 +34,7 @@
             live        : true,
             imageUrl    : "https://2.bp.blogspot.com/-qYdp0fptI7E/W9zRuz2e7_I/AAAAAAAAJ78/E4143bz-rHIJJqPZFGuVJK-NZGC4NJHeACLcBGAs/s1600/Thrill_logo.jpg",
             channel     : "livestreaming",
-            videoUrl    : "https://kastproxy-us.herokuapp.com/http://rr2.dens.tv/s/s34/index.m3u8",
+            videoUrl    : "http://rr2.dens.tv/s/s34/index.m3u8",
             adRules     : '',
             features: {
                 loadByDiv:true,
