--- a/embed/dubaione.html
+++ b/embed/dubaione.html
@@ -31,7 +31,7 @@
             live        : true,
             imageUrl    : "https://4.bp.blogspot.com/-COhPYGi5MzE/XMXBhsJ3BhI/AAAAAAAALWY/lMzIiaKozP0PpW02vfnB14lvBW0_IBr7ACLcBGAs/s1600/Dubai-One-TV.jpg?v=8.3.2",
             channel     : "livestreaming",
-            videoUrl    : "https://dminnvll.cdn.mangomolo.com/dubaione/smil:dubaione.stream.smil/playlist.m3u8",
+            videoUrl    : "http://dminnvll.cdn.mangomolo.com/dubaione/smil:dubaione.stream.smil/playlist.m3u8",
             adRules     : '',
             features: {
                 loadByDiv:true,
