--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     </style>
     <script type="text/javascript">
     </script>
+    <script>jwplayer.key = "9dOyFG96QFb9AWbR+FhhislXHfV1gIhrkaxLYfLydfiYyC0s";</script>
   </head>
   <body>
     
