--- a/index.html
+++ b/index.html
@@ -21,77 +21,38 @@
     </style>
     <script type="text/javascript">
     </script>
+    <script src="https://ssl.p.jwpcdn.com/player/v/8.8.0/jwplayer.js?v=1.1.0.0.222"></script>
     <script>jwplayer.key = "9dOyFG96QFb9AWbR+FhhislXHfV1gIhrkaxLYfLydfiYyC0s";</script>
   </head>
   <body>
-    
+    <center>
     <div id="botr_Zorph2mI_bN3hVCOy_div"></div>
+    <script type="text/javascript" src="https://content.jwplatform.com/players/Zorph2mI-bN3hVCOy.js"></script>
     <p id="description"></p>
     <script>
-        (function() {
-            var head = document.head;
-            var script;
-            function setupPlayer(w, h) {
-                if (script) return;
-                script = document.createElement('script');
-                script.async = 1;
-                script.src = "https://content.jwplatform.com/players/Zorph2mI-bN3hVCOy.js";
-                head.appendChild(script);
-                if (w && h) {
-                    var interval = setInterval(function() {
-                        var jwplayer = window.jwplayer;
-                        if (jwplayer && jwplayer('botr_Zorph2mI_bN3hVCOy_div')) {
-                            clearInterval(interval);
-                            jwplayer('botr_Zorph2mI_bN3hVCOy_div').on('ready', function(){this.resize(w, h);});
-                        }
-                    }, 100);
-                }
+        if (window == window.top) {
+            document.getElementById("title").style.display = "block";
+            document.getElementById("description").style.display = "block";
+            document.body.style.width = "596px";
+        } else {
+            if (window.innerWidth){
+                var w = Math.max(window.innerWidth,document.documentElement.clientWidth);
+                var h = Math.max(window.innerHeight,document.documentElement.clientHeight);
+                jwplayer().onReady(function(){jwplayer().resize(w,h);});
             }
-            function setMeta(name, value) {
-                var meta = window.document.querySelector('meta[property="' + name + '"]');
-                if (!meta) {
-                    meta = document.createElement('meta');
-                    meta.setAttribute('property', name);
-                    head.appendChild(meta);
-                }
-                meta.setAttribute('content', value);
+          /** Used to pass play/pause messages parent iframe via postMessage **/
+          window.addEventListener("message", function(evt) {
+            switch (evt.data) {
+              case "play":
+                jwplayer().play(true);
+                break;
+              case "pause":
+                jwplayer().pause(true);
+                break;
             }
-            if (window === window.top) {
-                document.getElementById("title").style.display = "block";
-                document.getElementById("description").style.display = "block";
-                document.body.style.width = "596px";
-                setupPlayer();
-            } else {
-                var w = 0;
-                var h = 0;
-                    if (window.innerWidth) {
-                        w = Math.max(window.innerWidth,document.documentElement.clientWidth);
-                        h = Math.max(window.innerHeight,document.documentElement.clientHeight);
-                    }
-                /** Used to pass play/pause messages parent iframe via postMessage **/
-                window.addEventListener("message", function(evt) {
-                    var player = window.jwplayer ? window.jwplayer('botr_Zorph2mI_bN3hVCOy_div') : null;
-                    switch (evt.data) {
-                        case "play" && player:
-                            player.play();
-                            break;
-                        case "pause" && player:
-                            player.pause();
-                            break;
-                        default:
-                            if (evt.data.type && evt.data.type === 'page-meta' && !script) {
-                                setMeta('og:description', evt.data.description);
-                                setMeta('og:title', evt.data.title);
-                                setupPlayer(w, h);
-                            }
-                    }
-                });
-                window.addEventListener('load', function() {
-                    setTimeout(function() {setupPlayer(w, h);}, 100);
-                });
-            }
-        }());
+          });
+        }
     </script>
+    </center>
   </body>
 </html>
-
