--- a/embed/rtv.html
+++ b/embed/rtv.html
@@ -15,8 +15,8 @@
                overflow: hidden;
            }
        </style>
-       <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-       <script src="//cdnjs.mbahnunungonline.net/libs/hola_player/package/dist/hola_player.js"></script>
+       <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+       <script src="https://warningfm.github.io/ajax/libs/hola_player/package/dist/hola_player.js"></script>
 	   
        <div align="center">
         <video poster="https://2.bp.blogspot.com/-Nx3S5zmrU5o/W9GuCwlSy6I/AAAAAAAAJ1Y/dZvyb0LMbCgyqMYs5_e6YLCZ9sYgNWNwACPcBGAYYCw/s1600/rtv-stream-06c6dc.jpg?v=8.3.2?v=8.3.2" id="video-player" class="video-js vjs-fluid vjs-default-skin" height="340" width="596" controls autoplay>
