--- a/embed/aljazeera_en.html
+++ b/embed/aljazeera_en.html
@@ -16,7 +16,7 @@
            }
        </style>
        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-       <script src="https://cdn1.mbahnunungonline.net/v3/hola_player/hola_player.js"></script>
+       <script src="https://warningfm.github.io/ajax/libs/hola_player/package/dist/hola_player.js"></script>
 	   
        <div align="center">
         <video poster="https://3.bp.blogspot.com/-KqX2-akkObs/XMfPVbWWyHI/AAAAAAAALY8/8ck9vzInyuIGDkjL0hGCQDYR_0wHmS4pACLcBGAs/s1600/aljazeera_en.jpg?v=8.3.2" id="video-player" class="video-js vjs-fluid vjs-default-skin" height="340" width="596" controls autoplay>
