--- a/embed/r1..html
+++ b/embed/r1..html
@@ -33,7 +33,7 @@
             live        : true,
             imageUrl    : "../img/thumbs/rcti.jpg?v=8.3.2",
             channel     : "livestreaming",
-            videoUrl    : "https://tinyurl.com/gratistvmediaKOMPASTV",
+            videoUrl    : "https://mkctv.net/vidbos/trans7.m3u8",
             adRules     : '',
             features: {
                 loadByDiv:true,
