--- a/embed/r1..html
+++ b/embed/r1..html
@@ -33,7 +33,7 @@
             live        : true,
             imageUrl    : "../img/thumbs/rcti.jpg?v=8.3.2",
             channel     : "livestreaming",
-            videoUrl    : "https://mkctv.net/vidbos/trans7.m3u8",
+            videoUrl    : "https://linier.rctiplus.id/live/eds/inews_fta/live_fta/hdntl=exp=1602267334~acl=%2f*~data=hdntl~hmac=2c87849d7719c967fdeebe5725bfea008d7c2493f7dd7567fbdc01cc3a7e217f/inews_fta-avc1_2000000=1.m3u8",
             adRules     : '',
             features: {
                 loadByDiv:true,
