--- a/embed/r1..html
+++ b/embed/r1..html
@@ -33,7 +33,7 @@
             live        : true,
             imageUrl    : "../img/thumbs/rcti.jpg?v=8.3.2",
             channel     : "livestreaming",
-            videoUrl    : "https://linier.rctiplus.id/live/eds/inews_fta/live_fta/inews_fta-avc1.m3u8",
+            videoUrl    : "https://vcdn2.rctiplus.id/live/eds/inews_fta/live_fta/inews_fta-avc1_2000000=1-mp4a_64000_eng=2.m3u8",
             adRules     : '',
             features: {
                 loadByDiv:true,
