--- a/embed/rcti.html
+++ b/embed/rcti.html
@@ -34,7 +34,7 @@
             live        : true,
             imageUrl    : "https://cdn4.mbahnunungonline.net/images/rcti.jpg",
             channel     : "livestreaming",
-            videoUrl    : "https://linier3.rctiplus.id/live/eds/rcti_fta/live_fta/rcti_fta.m3u8",
+            videoUrl    : "https://linier.rctiplus.id/live/eds/rcti_fta/live_fta/rcti_fta.m3u8",
             adRules     : '',
             features: {
                 loadByDiv:true,
