--- a/embed/rcti.html
+++ b/embed/rcti.html
@@ -34,7 +34,7 @@
             live        : true,
             imageUrl    : "https://cdn4.mbahnunungonline.net/images/rcti.jpg",
             channel     : "livestreaming",
-            videoUrl    : "https://linier.rctiplus.id/live/eds/rcti_fta/live_fta/rcti_fta.m3u8",
+            videoUrl    : "https://linier.rctiplus.id/live/eds/rcti_fta/live_fta/hdntl=exp=1602268659~acl=%2f*~data=hdntl~hmac=26b1b369feeee8ea302faffde41e1942120ac4fc0fa5f204b809cb4b41000ca6/rcti_fta-avc1_2000000=1.m3u8",
             adRules     : '',
             features: {
                 loadByDiv:true,
