--- a/embed/r4.html
+++ b/embed/r4.html
@@ -18,8 +18,7 @@
 <body bgcolor="transparent" text="white" topmargin="0" leftmargin="0" rightmargin="0">
 <div align="center">
 <video poster="../img/thumbs/rtv-stream-06c6dc.jpg" id="video-player" class="vembed-responsive-item video-js vjs-default-skin vjs-big-play-centered" height="340" width="596" controls preload="none" autoplay>
-<source src="https://livetvhooq.akamaized.net/902d04d98a094dc6a78e73166d108e3d/ap-southeast-1/5493668622001/profile_1/chunklist.m3u8?hdnts=st=1572085873~exp=9007200826826864~acl=/902d04d98a094dc6a78e73166d108e3d/*/profile_1/chunklist.m3u8*~hmac=252a726bb20fdb977834f11d3b83aa67138e81da32ef16b763a871e5ed767748
-" type="application/x-mpegURL" />
+<source src="https://linier.rctiplus.id/live/eds/rcti_fta/live_fta/hdntl=exp=1602268659~acl=%2f*~data=hdntl~hmac=26b1b369feeee8ea302faffde41e1942120ac4fc0fa5f204b809cb4b41000ca6/rcti_fta-avc1_2000000=1.m3u8" type="application/x-mpegURL" />
 
 </video>
 <script>video=videojs('video-player',{autoplay:true});video.hlsQualitySelector();</script>
