--- a/live/rcti.html
+++ b/live/rcti.html
@@ -29,10 +29,7 @@
   
 <body bgcolor="#2f3542" text="white" topmargin="0" leftmargin="0" rightmargin="0">
 <div align="center">
-<script type="text/javascript">
-<!-- tv.mbahnunungonline.net--> 
-document.write(unescape('%3C%64%69%76%20%69%64%3D%22%70%6C%61%79%65%72%22%3E%3C%2F%64%69%76%3E%0A%3C%69%66%72%61%6D%65%0A%20%20%20%20%73%72%63%3D%22%2F%65%6D%62%65%64%2F%72%63%74%69%22%0A%20%20%20%20%68%65%69%67%68%74%3D%22%33%34%30%22%0A%20%20%20%20%77%69%64%74%68%3D%22%35%39%36%22%0A%20%20%20%20%66%72%61%6D%65%62%6F%72%64%65%72%3D%22%30%22%0A%20%20%20%20%73%63%72%6F%6C%6C%69%6E%67%3D%22%6E%6F%22%0A%20%20%20%20%61%6C%6C%6F%77%66%75%6C%6C%73%63%72%65%65%6E%3D%22%74%72%75%65%22%3E%0A%3C%2F%69%66%72%61%6D%65%3E'));
-</script>
+<iframe src="https://embed.rctiplus.com/live/rcti/inewsid" width="596" height="335" frameborder="0" scrolling="no" allowfullscreen></iframe>
 </div>
 </body>
 </html>
