--- a/embed/aswajatv.html
+++ b/embed/aswajatv.html
@@ -16,7 +16,7 @@
            }
        </style>
        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-       <script src="https://cdn1.mbahnunungonline.net/v3/hola_player/hola_player.js"></script>
+       <script src="//cdnjs.mbahnunungonline.net/libs/hola_player/package/dist/hola_player.js"></script>
 	   
        <div align="center">
         <video poster="https://4.bp.blogspot.com/-rQdpip6uyZU/W9fC771_t_I/AAAAAAAAJ3k/48vWVay1iFwI6TXKmWEK7gcNI5vLe4rzACLcBGAs/s1600/AswajaTV.jpg?v=8.3.2" id="video-player" class="video-js vjs-fluid vjs-default-skin" height="340" width="596" controls autoplay>
