--- a/embed/tv1_rtm.html
+++ b/embed/tv1_rtm.html
@@ -20,7 +20,7 @@
 	   
        <div align="center">
         <video poster="../img/thumbs/Logo_of_TV1.png?v=8.3.2" id="video-player" class="video-js vjs-fluid vjs-default-skin" height="340" width="596" controls autoplay>
-        <source src="https://rtm1hdmobile.secureswiftcontent.com/Origin01/ngrp:RTM1/playlist.m3u8" type="application/x-mpegURL" />
+        <source src="https://rtm1mobile.secureswiftcontent.com/Origin01/ngrp:RTM1/playlist.m3u8" type="application/x-mpegURL" />
        </video>
      <script>
       window.hola_player();
