--- a/embed/jaktv.html
+++ b/embed/jaktv.html
@@ -24,7 +24,7 @@
        </video>
      <script>
     (function(){
-      window.hola_player({title: 'JTV'});
+      window.hola_player({title: 'jaktv'});
     })();
   </script>
      </div>
