--- a/embed/jaktv.html
+++ b/embed/jaktv.html
@@ -20,7 +20,7 @@
 	   
        <div align="center">
         <video poster="https://3.bp.blogspot.com/-TxC76ElPUEQ/XMsZnlEZe7I/AAAAAAAALZ0/1lIHh69eQXwNESzxplUoMj6vhzJlprCZwCLcBGAs/s1600/jaktv-tv-stream.jpg?v=8.3.2" id="video-player" class="video-js vjs-fluid vjs-default-skin" height="340" width="596" controls autoplay>
-        <source src="https://zet.pluginsandthemes.ro/http://103.130.186.138:8800/getstream.m3u8.php?channel=jaktv" type="application/x-mpegURL" />
+        <source src="https://zet.pluginsandthemes.ro/http://185.238.0.145:1313/c/max/jaktv-hd.m3u8" type="application/x-mpegURL" />
        </video>
      <script>
     (function(){
