--- a/embed/trans7.html
+++ b/embed/trans7.html
@@ -20,7 +20,7 @@
 	   
        <div align="center">
         <video poster="https://assets-jpcust.jwpsrv.com/thumbnails/dovtazeb-720.jpg" id="video-player" class="video-js vjs-fluid vjs-default-skin" height="340" width="596" controls autoplay>
-        <source src="https://kastproxy-us.herokuapp.com/http://rr2.dens.tv/s/s101/index.m3u8" type="application/x-mpegURL" />
+        <source src="https://kastproxy-us.herokuapp.com/http://rr2.dens.tv/s/s101/01.m3u8" type="application/x-mpegURL" />
        </video>
      <script>
     (function(){
