--- a/embed/AstroAwani.html
+++ b/embed/AstroAwani.html
@@ -16,7 +16,7 @@
       <div id="vjs-video-embed" class="left relative"></div>
       <div id="my-video" class="video_embed_hls post_embed_video_center">
       <video class="video-js vjs-default-skin vjs-16-9" controls autoplay></video>
-      <script>(function(){var a={linear:"",};var b=document.location.search.substr(1);window.hola_player({title:"",poster:"https://lh6.googleusercontent.com/-MCf0Ast0igk/VKrH7BRLk3I/AAAAAAAAAK4/MSlzx5nI9fE/s522/Astro-awani.jpg?v=8.3.2",sources:[{src:"https://bcsecurelivehls-i.akamaihd.net/hls/live/722763/4508222217001/master.m3u8",}],ads:{adTagUrl:a[b||"linear"]||b,},settings:{quality:true,},watermark:{image:'',position:'bottom-left',fadeTime:5000,},})})();</script>
+      <script>(function(){var a={linear:"",};var b=document.location.search.substr(1);window.hola_player({title:"",poster:"https://lh6.googleusercontent.com/-MCf0Ast0igk/VKrH7BRLk3I/AAAAAAAAAK4/MSlzx5nI9fE/s522/Astro-awani.jpg?v=8.3.2",sources:[{src:"https://awanitv.akamaized.net/hls/live/2017836/LiveTV1/index.m3u8",}],ads:{adTagUrl:a[b||"linear"]||b,},settings:{quality:true,},watermark:{image:'',position:'bottom-left',fadeTime:5000,},})})();</script>
   </div>
  
   </body></html>
