--- a/embed/bein1.html
+++ b/embed/bein1.html
@@ -47,7 +47,7 @@ document.getElementsByTagName('head')[0].appendChild(meta);
 		aboutlink: 'http://mbahnunungonline.net',
 		autostart: 'true',
 		stretching: 'uniform',
-		file: "https://dl.dropbox.com/sh/ufeeyetsmgdp748/AACi28jNOAEDeJfWTVL2HchAa/Net TV.m3u8?dl=0",
+		file: "http://79.137.41.99/DisneyChannel/tracks-v1a1/mono.m3u8",
 		title: "ANIMAX",
 		image: "https://assets.change.org/photos/5/fw/yl/KFfWYlPtIbbyAup-800x450-noPad.jpg?1521112811"
 	});
