--- a/embed/bein1.html
+++ b/embed/bein1.html
@@ -19,7 +19,8 @@
     </script>        
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     
-        <script src="https://content.jwplatform.com/libraries/USNaSatu.js"></script>
+        <script src="//ssl.p.jwpcdn.com/player/v/8.2.2/jwplayer.js?v=1.1.0.0.222"></script>
+        <script>jwplayer.key = "9dOyFG96QFb9AWbR+FhhislXHfV1gIhrkaxLYfLydfiYyC0s";</script>
 
             <style>
            body {
@@ -28,7 +29,7 @@
                overflow: hidden;
            }
        </style>
-    <script src="https://cdn1.mbahnunungonline.net/jwp/jw7-hlsjs-provider.js"></script><!-- http://cdn.streamroot.io/jw7-hlsjs-provider/stable/jw7-hlsjs-provider.js -->
+    <script src="//cdn4.mbahnunungonline.net/js/jw7-hlsjs-provider.js"></script><!-- http://cdn.streamroot.io/jw7-hlsjs-provider/stable/jw7-hlsjs-provider.js -->
 
 <center>
 <div id="streaming"></div>
