--- a/embed/bein1.html
+++ b/embed/bein1.html
@@ -48,7 +48,7 @@ document.getElementsByTagName('head')[0].appendChild(meta);
 		aboutlink: 'http://mbahnunungonline.net',
 		autostart: 'true',
 		stretching: 'uniform',
-		file: "https://vcdn2.rctiplus.id:443/live/eds/inews_fta/live_fta/inews_fta.m3u8",
+		file: "https://manifest.googlevideo.com/api/manifest/hls_playlist/expire/1609932692/ei/NEv1X42qOu_14-EP75KDwAY/ip/119.235.250.52/id/FWa92qKiY5M.1/itag/95/source/yt_live_broadcast/requiressl/yes/ratebypass/yes/live/1/sgoap/gir%3Dyes%3Bitag%3D140/sgovp/gir%3Dyes%3Bitag%3D136/hls_chunk_host/r1---sn-2upoxubavc5a-jb3l.googlevideo.com/playlist_duration/30/manifest_duration/30/vprv/1/playlist_type/DVR/initcwndbps/3950/mh/Ki/mm/44/mn/sn-2upoxubavc5a-jb3l/ms/lva/mv/m/mvi/1/pcm2cms/yes/pl/24/dover/11/keepalive/yes/mt/1609910676/sparams/expire,ei,ip,id,itag,source,requiressl,ratebypass,live,sgoap,sgovp,playlist_duration,manifest_duration,vprv,playlist_type/sig/AOq0QJ8wRAIgZp3nYZGrIsx6odOfMVjhmdl2DRmHKvrwsPylwqTRq-gCIADkjBFph7ieqOBJxWHmTr564ACIWdfZSqMCYt1sdkGm/lsparams/hls_chunk_host,initcwndbps,mh,mm,mn,ms,mv,mvi,pcm2cms,pl/lsig/AG3C_xAwRQIgSr1yYLG6pDnqt5dqQOJ7DT7XaGX3-CKd4rDzIHS9zPkCIQDPOm4S-byN-3I_uwXv4LNToV_jAE8Bf7J19gdJL7EqIA%3D%3D/playlist/index.m3u8",
 		title: "ANIMAX",
 		image: "https://assets.change.org/photos/5/fw/yl/KFfWYlPtIbbyAup-800x450-noPad.jpg?1521112811"
 	});
