Update and rename r6.php to r6.html

--- a/embed/r6.html
+++ b/embed/r6.html
@@ -31,7 +31,7 @@
             live        : true,
             imageUrl    : "../img/thumbs/Mayapada_TV.png?v=8.3.2?v=8.3.2",
             channel     : "livestreaming",
-            videoUrl    : "https://livetvhooq.akamaized.net:443/b2fec42490a14386ac53eafa47f590a7/ap-southeast-1/5493668622001/profile_0/chunklist.m3u8?hdnts=st=1573597923~exp=9007200828338914~acl=/b2fec42490a14386ac53eafa47f590a7/*/profile_0/chunklist.m3u8*~hmac=15a17e5b10bc2f36b6fbe927f137fff5a759fcc501c3d6712d5976a51a9b45ea",
+            videoUrl    : "https://liveorigin01.hbogoasia.com:8443/origin/live/main/HBO/index.m3u8",
             adRules     : '',
             features: {
                 loadByDiv:true,
