--- a/embed/r6.html
+++ b/embed/r6.html
@@ -29,7 +29,7 @@
             autoplay    : false,
             mute        : false,
             live        : true,
-            imageUrl    : "../img/thumbs/Mayapada_TV.png?v=8.3.2?v=8.3.2",
+            imageUrl    : "https://pbs.twimg.com/profile_images/1272570158964498432/_nbMzcVc_400x400.jpg",
             channel     : "livestreaming",
             videoUrl    : "https://liveorigin01.hbogoasia.com:8443/origin/live/main/HBO/index.m3u8",
             adRules     : '',
