--- a/embed/r5.html
+++ b/embed/r5.html
@@ -24,7 +24,7 @@
         var video_title = "Live Streaming";
     </script>
         <div id="video" class="fp-slim fp-mute"></div>
-        <script src="../js/nnVideo.core.js?v=98c76261ff1">
+        <script src="https://mbahnunung.github.io/nnVideo/nnVideo.core.js?v=98c76261ff1">
         {
             target      : 'video',
             title       : 'Live Streaming',
